--- a/css/style.css
+++ b/css/style.css
@@ -302,67 +302,6 @@ section .produk {
   color: white;
 }
 
-/* paket */
-
-#wrapper {
-  width: 100%;
-  max-width: 964px;
-  position: relative;
-}
-
-#carousel {
-  overflow: auto;
-  scroll-behavior: smooth;
-  scrollbar-width: none;
-}
-
-#carousel::-webkit-scrollbar {
-  height: 0;
-}
-
-#prev,
-#next {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  background: white;
-  border: none;
-  padding: 8px;
-  border-radius: 50%;
-  outline: 0;
-  cursor: pointer;
-  position: absolute;
-}
-
-#prev {
-  top: 50%;
-  left: 0;
-  transform: translate(50%, -50%);
-  width: 40px;
-}
-
-#next {
-  top: 50%;
-  right: 0;
-  transform: translate(-50%, -50%);
-  width: 40px;
-}
-
-#paket {
-  display: grid;
-  grid-gap: 16px;
-  grid-auto-flow: column;
-  margin: auto;
-  box-sizing: border-box;
-}
-
-.item {
-  width: 300px;
-  background: green;
-}
-.produk2 {
-  background-color: blue;
-}
 .paket {
   margin: auto;
   width: 1000px;
@@ -538,6 +477,7 @@ section .produk2 {
 }
 .alat img {
   width: 200px;
+  height: 200px;
 }
 .alat h2 {
   font-size: 19px;
@@ -581,8 +521,35 @@ section .produk2 {
   padding-bottom: 15px;
 }
 .btn-detail {
-  margin-top: 60px;
+  margin-top: 28px;
   display: flex;
+}
+.wish {
+  width: 140px;
+  height: 50px;
+  background-color: #ffaa44;
+  align-items: center;
+  margin-left: 20px;
+  border-radius: 5px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.wish:hover {
+  background-color: #ff8c00;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.wish img {
+  width: 30;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+.wish p {
+  font-weight: 500;
+  position: absolute;
+  margin-top: -25px;
+  margin-left: 50px;
+  color: white;
 }
 .btn-detail p {
   margin-top: auto;
@@ -609,19 +576,7 @@ section .produk2 {
 .btn-detail a {
   text-decoration: none;
 }
-.wish {
-  width: 50px;
-  height: 50px;
-  background-color: #ffaa44;
-  align-items: center;
-  margin-left: 20px;
-  border-radius: 5px;
-}
-.wish img {
-  width: 40;
-  margin: 5;
-  cursor: pointer;
-}
+
 .spek {
   width: 70%;
   margin: auto;
@@ -1369,9 +1324,29 @@ section .produk2 {
   transition: 0.5s;
   cursor: pointer;
   margin-top: 40px;
+  margin-bottom: 40px;
 }
 .admin-form input[type='submit']:hover {
   background-color: #ff8c00;
+}
+.admin-form input[type='file'] {
+  cursor: pointer !important;
+}
+.admin-form input[type='file']::-webkit-file-upload-button {
+  background: #ffaa44;
+  border: 0;
+  padding: 1em 2em;
+  cursor: pointer;
+  color: #fff;
+  border-radius: 5px;
+}
+.admin-form input[type='file']::-ms-browse {
+  background: #ffaa44;
+  border: 0;
+  padding: 1em 2em;
+  cursor: pointer;
+  color: #fff;
+  border-radius: 5px;
 }
 .custom-select {
   position: relative;
@@ -1476,5 +1451,20 @@ section .produk2 {
 }
 .admin .con-profil {
   padding-bottom: 40px;
-  margin-top: 160px;
+  margin-top: 40px;
+}
+.user-admin {
+  margin-left: 60px;
+  margin-top: 100px;
+  font-size: 23px;
+  font-weight: 500;
+}
+.user-admin img {
+  max-width: 56px;
+  max-height: 56px;
+  border-radius: 500px;
+}
+.user-admin p {
+  margin-left: 70px;
+  margin-top: -52px;
 }
